# OOP_Laba_04

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: figure.h  figures_array.h  hexagon.h  main.cpp  octagon.h  point.h  triangle.h
test/: test_figure.cpp
